--- a/source/_pages/api/i18n.md
+++ b/source/_pages/api/i18n.md
@@ -5,36 +5,23 @@ top_nav: api
 ---
 # Internationalization
 
-This document describes how we intend to make our REST APIs translatable while
-still allowing client to support multiple languages.
-
-> The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT",
-> "SHOULD", "SHOULD NOT", "RECOMMENDED",  "MAY", and "OPTIONAL" in
-> this document are to be interpreted as described in RFC 2119.
-
-This document describes a single aspect ouf the gravity plattform. It
-has a normative character and is complemented by additional normative
-documents pertaining to the gravity-plattform.
-
-## General
-
-The headers in this documents SHALL be defined as specified in RFC2616.
-
 ## Client requests multiple languages
 
-A client MAY specify one or multiple languages using the RFC2616
-Accept-Language header.
+I client need to specify which languages it wants results in, this is done
+through the RFC2616 Accept-Language header.
 
 ``Accept-Language: en, de``
 
-When PUT or POSTing contents a server MUST send a ``Content-Language``
-header containing the language of the document.
+When PUT or POSTing contents graviton will always  send a ``Content-Language``
+header containing the languages of the document.
 
+Please note that you are expected to request multiple languages to implement
+offline language switching capabilities.
 
 ## Server returns localized responses
 
-The server SHALL respond with content localized into all the possible
-language-tags requested by the client. It MUST indicate which languages
+The server responds with content localized into all the possible
+language-tags requested by the client. It indicates which languages
 where used in a ``Content-Language`` header.
 
 ``Content-Language: en, de``
@@ -48,9 +35,33 @@ where used in a ``Content-Language`` header.
 }
 ````
 
+## Client sends translated data
+
+The client should indicate what languages he is sending using `Content-Language`. It should
+then proceed to send translated data in all the specified languages. Leaving out languages
+will lead to an error.
+
 ## Default behaviour
 
-The default behavious of a server MUST be to speak english. It MUST
-return a ``Content-Language: en`` header in each response.
+The default behavious of graviton is to speak english.
 
+## Inner working of translation features.
 
+The underlying data store of the translation features are exposed as service on their own right.
+
+You may use these services to translate strings directly or to store you own application translations if you wish to do so.
+
+* The `/i18n/language/` service contains a listing of all the available services.
+* The `/i18n/translatable` service contains a listing of all the available translatable strings.
+
+The language structure is pretty much self explanatory. It is worth noting the languages need to be defined in it for the to become
+available through graviton.
+
+The translatable structure warrants a better explanation of it's fields.
+
+* The `id` field is a based on the tuple of `domain`, `locale` and `original`.
+* The `domain` field is based on the service name, it is usually based on the first part of the URL.
+* The `isLocalized` field may be used to indicate if a field has been translated yet.
+
+If you want to store your own strings in the translatable endpoint you should choose a domain that does not clash with existing
+domains.
