Adding more documentation and updating some codes.

--- a/source/_pages/api/i18n.md
+++ b/source/_pages/api/i18n.md
@@ -19,15 +19,15 @@ Please note that you are expected to request multiple languages to implement
 offline language switching capabilities.
 
 Languages are divided by "domains". 
-The first part uf the url is used to map the domain and is then mapped as the ID for the translation
-to make it faster for longer translations, sha1( domain + language + translation). This means that all
-translations within the same domain will be unique even if attempt to save different translation for different
-services. 
+The first part of the url is used to map the domain and is then mapped as the ID for the translation 
+to make it faster for longer translations and saving resources on indexes, sha1( domain + language + translation). 
+All translations within the same domain will be unique even if saving same translation for different 
+domain services. 
 
-For example, an api /magazine/ translations will not have the same translations as in /book/ but if a book title
+For example, an api /magazine/ translations will not have the same translations as in /book/ but if a book title 
 is updated having the exact same title as an another book, that second book will now share the same title translation.
-This is useful is all translations will match but when designing the api schema keep in mind if a translation is what
-you need.
+This is useful as all translations will match, just keep in mind that when designing the api definition if a translation 
+is what you need.
 
 ## Server returns localized responses
 
@@ -54,20 +54,21 @@ will lead to an error.
 
 ## Default behaviour
 
-The default behavior of graviton is to reply in english. Defined in parameters.
+The default behavior of graviton is to reply in english. Defined in parameters. 
 
 ## Inner working of translation features.
 
-The underlying data store of the translation features are exposed as service on their own right.
+The underlying data store of the translation features are exposed as service on their own right. 
+A language needs to be defined before any translation can be done. First create the language, then translations.
 
 You may use these services to translate strings directly or to store you own application translations if you wish to do so.
 
-* The `/i18n/language/` service contains a listing of all the available services.
+* The `/i18n/language/` service contains a listing languages available for services.
 * The `/i18n/translatable/` service contains a listing of all the available translatable strings.
 
 The translatable structure:
 
-* The `id` field is a based on the tuple of `domain`, `locale` and `original`.
+* The `id` field is a based on the sha1 of `domain`, `locale` and `original`.
 * The `domain` field is based on the service name, it is usually based on the first part of the URL.
 * The `original` field for original text to be translated.
 * The `translated` field for translation.
